--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Papa Jang | Portfolio</title>
+    <title>Papa Dieng | Portfolio</title>
     <style>
         body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; background-color: #f4f4f4; color: #333; }
         header { background: #2c3e50; color: #fff; padding: 2rem 0; text-align: center; }
@@ -16,7 +16,7 @@
 <body>
 
     <header>
-        <h1>Papa Jang</h1>
+        <h1>Papa Dieng</h1>
         <p>Software Engineer | Computer Science Senior at UNCG</p>
     </header>
 
