--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Papa Dieng | Portfolio</title>
     <style>
+        .btn-project {
+    display: inline-block;
+    margin-top: 15px;
+    padding: 10px 20px;
+    background: #2c3e50;
+    color: white;
+    text-decoration: none;
+    border-radius: 4px;
+    font-weight: bold;
+    transition: background 0.3s;
+}
+.btn-project:hover {
+    background: #1a252f;
+}
         body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 0; background-color: #f4f4f4; color: #333; }
         header { background: #2c3e50; color: #fff; padding: 2rem 0; text-align: center; }
         .container { width: 80%; margin: auto; overflow: hidden; padding: 20px; }
@@ -30,7 +44,7 @@
             <h3>Sentinel-Vault</h3>
             <p><strong>Status:</strong> In Development</p>
             <p>A FinTech application designed to prevent social engineering scams through real-time mutual authentication between customers and bank employees.</p>
-            <div class="placeholder-video">[ Demo Video Coming Soon ]</div>
+           <a href="sentinel-vault.html" class="btn-project">Explore Architecture & Source Code ➔</a>
         </div>
 
         <div class="project-card">
