--- a/sentinel-vault.html
+++ b/sentinel-vault.html
@@ -176,7 +176,7 @@
             </div>
         </div>
 
-        <a href="#" class="btn-github">View Source Code on GitHub</a>
+       <a href="https://github.com/padiengweb/sentinel-vault" target="_blank" class="btn-github">View Source Code on GitHub</a>
 
     </main>
 
