--- a/sentinel-vault.html
+++ b/sentinel-vault.html
@@ -172,7 +172,7 @@
             <h2>Live Demonstration</h2>
             <p>Watch the two-way verification process successfully intercept and block an unauthorized access attempt.</p>
             <div class="media-placeholder">
-                [ YouTube Video Embed Will Go Here ]
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/A0GDtUEdfQE?si=I7GEWrKU8mvNjWV7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
 
