--- a/sentinel-vault.html
+++ b/sentinel-vault.html
@@ -171,9 +171,20 @@
         <div class="card">
             <h2>Live Demonstration</h2>
             <p>Watch the two-way verification process successfully intercept and block an unauthorized access attempt.</p>
-            <div class="media-placeholder">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/A0GDtUEdfQE?si=I7GEWrKU8mvNjWV7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <div class="card">
+            <h2>Live Demonstration</h2>
+            <p>Watch the two-way verification process successfully intercept and block an unauthorized access attempt.</p>
+            
+            <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 8px; margin-top: 20px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
+                <iframe style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" 
+                    src="https://www.youtube.com/embed/A0GDtUEdfQE?si=I7GEWrKU8mvNjWV7" 
+                    title="YouTube video player" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    allowfullscreen>
+                </iframe>
             </div>
+        </div>
         </div>
 
        <a href="https://github.com/padiengweb/sentinel-vault" target="_blank" class="btn-github">View Source Code on GitHub</a>
