--- a/index.html
+++ b/index.html
@@ -47,12 +47,36 @@
            <a href="sentinel-vault.html" class="btn-project">Explore Architecture & Source Code ➔</a>
         </div>
 
-        <div class="project-card">
-            <h3>Jailbreak</h3>
-            <p><strong>Status:</strong> In Development</p>
-            <p>A cybersecurity tool utilizing a sandboxed LLM to analyze and neutralize prompt injection attacks.</p>
-            <div class="placeholder-video">[ Demo Video Coming Soon ]</div>
+       <div class="project-card">
+    <div class="project-content">
+        <h3 class="project-title">🛡️ Jailbreak: AI Mobile Threat Sandbox</h3>
+        <p class="project-role">DevSecOps & AI Engineer</p>
+        
+        <p class="project-description">
+            An enterprise-grade threat intelligence tool engineered to catch advanced mobile malware. 
+            Utilized Google's multimodal Gemini 2.5 Flash AI to perform dynamic Intent vs. Behavior analysis. 
+            The system cross-references application UI screenshots against stated developer intent, automatically 
+            flagging UI deception, credential harvesting, and phishing attempts with a dynamic threat score.
+        </p>
+
+        <div class="tech-stack">
+            <span class="tech-tag">Python</span>
+            <span class="tech-tag">FastAPI</span>
+            <span class="tech-tag">Google GenAI</span>
+            <span class="tech-tag">RESTful APIs</span>
+            <span class="tech-tag">JavaScript</span>
         </div>
+
+        <div class="project-links">
+            <a href="https://github.com/padiengweb/jailbreak" target="_blank" class="btn primary-btn">
+                View Source Code on GitHub
+            </a>
+            <a href="#" class="btn secondary-btn">
+                Watch Live Demo
+            </a>
+        </div>
+    </div>
+</div>
 
         <div class="project-card">
             <h3>Sham / TZK</h3>
