--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
            <a href="sentinel-vault.html" class="btn-project">Explore Architecture & Source Code ➔</a>
         </div>
 
-       <div class="card">
+       <div class="project-card">
     <h3>Jailbreak</h3>
     
     <p><strong>Status:</strong> Completed</p>
